# JNItest

./: build.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/jiagutech/jnitest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: com_jiagutech_jnitest_InputPen.cpp  debug.h  input_pen.cpp  input_pen.h  native-lib.cpp
app/src/main/java/com/jiagutech/jnitest/: InputPen.java  MainActivity.java  PenEvent.java
app/src/main/myJNI/: CMakeLists.txt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/jiagutech/jnitest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
